return books functionality
